--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     </section>
 
     <!-- "reach out" section-->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3477.71945596975!2d-98.41617768481481!3d29.349216558032733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865cf75cb3f648f3%3A0xee083d63452d7dd6!2s7739%20Beechnut%20Oak%2C%20San%20Antonio%2C%20TX%2078223!5e0!3m2!1sen!2sus!4v1612037405650!5m2!1sen!2sus"
@@ -157,22 +157,22 @@
                 allowfullscreen
             >
             </iframe>    
-        </div>
-        <div>
-           <h3>Run Buddy</h3> 
-           <p>
-               Any questions or concerns before signing up?
-               <br />
-               Let us know and we'll be happy to talk to you!
-            </p>
-            <address>
-                55 Main Street <br />
-                Some Town, Ca <br />
-                12345<br />
-                P: 555.RUN.BUDZ (555.786.2839)<br />
-                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-            </address>
-        </div>
+            <div>
+            <h3>Run Buddy</h3> 
+            <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br />
+                    Some Town, Ca <br />
+                    12345<br />
+                    P: 555.RUN.BUDZ (555.786.2839)<br />
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
+        </div>    
     </section>
 
     <!-- footer-->
