--- a/index.html
+++ b/index.html
@@ -178,8 +178,10 @@
     <!-- footer-->
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
-        <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
-        &copy; 2019 Run Buddy, Inc.
+        <div>
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a>
+            <br />
+            &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
 </body>
