--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
@@ -202,10 +203,11 @@
 
     <!-- "reach out" section-->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">
-            Reach Out
-        </h2>
-        
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">
+                Reach Out
+            </h2>
+        </div>
         <div class="contact-info">
             <div>
                 <h3>Run Buddy</h3>
